# stuffsynth

./: LICENSE  README.md  pyproject.toml  requirements.in
config/: __init__.py  config.yaml  config_loader.py
database/: faiss_db.py  utils.py
sampler/: implay.py  implay3.py  implayfresh.py  remove_silence.py  resample.py  sample.py
synth/: grain.py
viz/: pca.py  pca3.py  pca4.py  pca5.py  umap_better.py  umap_db.py  umap_plotter.py
